[package]
name = "llr-reco"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
cfl = { git = "https://github.com/wyatt-A/cfl.git", features = ["linalg-mkl-static", "nifti-dump"] }
glob = "0.3.2"
rand = "0.9.0"
rayon = "1.10.0"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.10"

[features]
default = []
cuda = []
